--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="sunset">Sunset</string>
     <string name="login_to_your_account">Login to Your Account</string>
     <string name="register_now">New user? Register Now</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="login">LOGIN</string>
 </resources>
