--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,11 @@
     <string name="email">Email</string>
     <string name="password">Password</string>
     <string name="login">LOGIN</string>
+
+
+    <string name="home">Home</string>
+    <string name="provinces">Provinces</string>
+    <string name="search">Search</string>
+    <string name="profile">Profile</string>
+    <string name="more">More</string>
 </resources>
